add max heap size